--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <i class="fas fa-tablet-alt fa-3x"></i>
           <p class="hide-sm">Watch anywhere</p>
         </div>
-        <div id="tab-3" class="tab-itemr">
+        <div id="tab-3" class="tab-item">
           <!-- using fontawesome -->
           <i class="fas fa-tags fa-3x"></i>
           <p class="hide-sm">Pick your price</p>
@@ -48,7 +48,7 @@
     </section>
     <section class="tab-content">
       <div class="container">
-        <!-- <div id="tab-content-1" class="tab-content-item show">
+        <div id="tab-1-content" class="tab-content-item show">
           <div class="tab-1-content-inner">
             <div>
               <p class="text-lg">
@@ -59,8 +59,8 @@
             </div>
             <img src="./image/tab-content-1.png" alt="" />
           </div>
-        </div> -->
-        <!-- <div id="tab-2-content" class="tab-content-item">
+        </div>
+        <div id="tab-2-content" class="tab-content-item">
           <div class="tab-2-content-top">
             <p class="text-lg">
               Watch TV shows and movies anytime, anywhere - personalized for
@@ -90,8 +90,8 @@
               <p class="text-dark">Watch right on Netflix.com</p>
             </div>
           </div>
-        </div> -->
-        <div id="tab-content-3" class="tab-content-item">
+        </div>
+        <div id="tab-3-content" class="tab-content-item">
           <div class="text-center">
             <p class="text-lg">
               Choose one plan and watch everything on Netflix.
@@ -191,5 +191,6 @@
         </ul>
       </div>
     </footer>
+    <script src="./script.js"></script>
   </body>
 </html>
